[package]
name = "my-redis"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.38",features = ["derive"] }
bytes = "1.10.1"
tokio = { version = "1.45.0",features = ["full"] }
tracing-subscriber = "0.3.19"
tracing-opentelemetry = { version = "0.21.0", optional = true }
tracing = "0.1.41"
